--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,14 +7,49 @@ body {
   padding:1em;
 }
 
-.pin {
+.messages {
   width:100%;
   max-width:700px;
   text-align:left;
   display:inline-block;
 }
 
-.pin img {
+.messages .pin {
+  clear: both;
+  margin-bottom: 30px;
+}
+
+.pin .permalink {
+  font-size: 0.7em;
+  font-style: italic;
+  display: inline-block;
+  margin-left: 1em;
+}
+
+.messages .score {
+  display: inline-block;
+  color:rgb(75, 75, 75);
+  margin-left: 1em;
+  font-size: .85em;
+}
+
+.messages .message .content p {
+  margin: 0;
+}
+
+.messages .score::before {
+  content: 'Score:';
+  font-weight: BOLD;
+  font-size: .85em;
+}
+
+.messages img.emoji {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+}
+
+.messages img.icon {
   background-color:rgb(248,244,240);
   width:36px;
   height:36px;
@@ -22,27 +57,28 @@ body {
   display:inline-block;
   vertical-align:top;
   margin-right:0.65em;
+  float: left;
 }
 
-.pin .time {
+.messages .time {
   display:inline-block;
   color:rgb(200,200,200);
   margin-left:0.5em;
 }
 
-.pin .username {
+.messages .username {
   display:inline-block;
   font-weight:600;
   line-height:1;
 }
 
-.pin .message {
+.messages .message {
   display:inline-block;
   vertical-align:top;
   line-height:1;
   width:calc(100% - 3em);
 }
 
-.pin .message .content {
+.messages .message .content {
   line-height:1.5;
 }
